conditions.Conditions.scala.error
Erreur de compilation :
Conditions:6: error: not found: value droit
     droit();} 
     ^